# shrink

./: .gitignore  Cargo.toml  Dockerfile  README.md  URL Shortener.postman_collection.json  docker-compose.yaml  shrink.sh  uris.txt
data/: urls.db
scripts/: alias.sh  shrink.sh
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  route.rs  slug.rs
src/app/: mod.rs
src/generators/: counter.rs  mod.rs  rb62.rs
src/page/: index.html
src/shrinkers/: basic.rs
src/storage/: cached.rs  error.rs  memory.rs  mod.rs  redis.rs
src/storage/db/: postgres.rs  sqlite.rs
src/storage/db/scripts/: schema.sql
src/storage/db/scripts/postgres/: insert.sql  schema.sql  select.sql
src/storage/db/scripts/sqlite/: insert.sql  select.sql
src/storage/sqlite/: mod.rs
src/storage/sqlite/scripts/: insert.sql  schema.sql
src/validator/: alnum.rs  code.rs  default.rs  mod.rs
