[package]
name = "shrink"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
base62 = "2.2.1"

