[package]
name = "shrink"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-macros = "0.5.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
r2d2_sqlite = "0.26.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.2"
url = { version = "2.5.4", features = ["serde"] }

